# vbackup

./: .ci-debian  .ci-name  .ci-tgz  .gitignore  AUTHORS  Makefile.am  README  README.dev  README.md  TODO  acl  configure.ac  configure.in  propset.ignore1
docs/: conf.py  copyright.rst  dev.rst  how.rst  index.rst  install.rst  intro.rst  issues.rst  modules.rst  overview.rst  setup.rst
docs/_static/rtd/fonts/: fontawesome-webfont.eot
docs/_static/rtd/js/: modernizr.min.js
scripts/: Makefile.am
scripts/mount/: Makefile.am  nfsmount  umount
scripts/scripts/: Makefile.am  README  sbackup.conf.sample  skel  vbackup.conf.sample
scripts/scripts/db/: Makefile.am  mysql  openldap  pgsql  sample.mysql  sample.openldap  sample.pgsql
scripts/scripts/encrypt/: Makefile.am  gpg  sample.gpg  sample.x509  x509
scripts/scripts/fs/: Makefile.am  ftar  sample.ftar  sample.tar  sample.xfsdump  tar  xfsdump
scripts/scripts/misc/: Makefile.am  exec  exist  mbr  md5  off  rm  sample.exec  sample.exist  sample.mbr  sample.md5  sample.rm
scripts/scripts/mount/: Makefile.am  mount  nfsmount  sample.mount  sample.nfsmount  sample.umount  umount
scripts/scripts/mysql/: Makefile.am  mysql  sample.mysql
scripts/scripts/netcp/: Makefile.am  rsync  sample.rsync  sample.scp  scp
scripts/scripts/pkg/: Makefile.am  dpkg  rpm  sample.dpkg  sample.rpm
scripts/wizard/: 10-exist  15-rm  20-dpkg  21-rpm  25-mbr  30-pgsql  35-mysql  40-openldap  50-tar  80-md5  90-scp  Makefile.am  skel
